// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders <Flexbox /> component with layout helpers (height, width, margin, padding, etc) 1`] = `
"/*sc-component-id:sc-bdVaJa*/.sc-bdVaJa {
}
.cXgeQK {
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
}
.DtNwl {
  -webkit-align-items:center;
  -webkit-box-align:center;
  -ms-flex-align:center;
  align-items:center;
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
  -webkit-flex-direction:column;
  -ms-flex-direction:column;
  flex-direction:column;
  -webkit-box-flex:1;
  -webkit-flex-grow:1;
  -ms-flex-positive:1;
  flex-grow:1;
  -webkit-flex-wrap:wrap;
  -ms-flex-wrap:wrap;
  flex-wrap:wrap;
  -webkit-box-pack:center;
  -webkit-justify-content:center;
  -ms-flex-pack:center;
  justify-content:center;
}
.jIWJwd {
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
  -webkit-flex:0;
  -ms-flex:0;
  flex:0;
  -webkit-flex-basis:0;
  -ms-flex-basis:0;
  flex-basis:0;
  -webkit-flex-grow:0;
  -ms-flex-grow:0;
  flex-grow:0;
  -webkit-flex-shrink:0;
  -ms-flex-shrink:0;
  flex-shrink:0;
  height:0;
  margin:0;
  margin-bottom:0;
  margin-left:0;
  margin-right:0;
  margin-top:0;
  max-height:0;
  max-width:0;
  min-height:0;
  min-width:0;
  -webkit-order:0;
  -ms-flex-order:0;
  order:0;
  padding:0;
  padding-bottom:0;
  padding-left:0;
  padding-right:0;
  padding-top:0;
  width:0;
}
.eylexG {
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
  height:100%;
  margin:66px33px;
  margin-right:25px;
  max-width:100vw;
  min-height:100vh;
  padding:99px;
  padding-left:50px;
  width:100px;
}
"
`;

exports[`Renders <Flexbox /> component with layout helpers (height, width, margin, padding, etc) 2`] = `
<div
  className="sc-bdVaJa eylexG"
/>
`;

exports[`Renders <Flexbox /> component with several flexbox props 1`] = `
"/*sc-component-id:sc-bdVaJa*/.sc-bdVaJa {
}
.cXgeQK {
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
}
.DtNwl {
  -webkit-align-items:center;
  -webkit-box-align:center;
  -ms-flex-align:center;
  align-items:center;
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
  -webkit-flex-direction:column;
  -ms-flex-direction:column;
  flex-direction:column;
  -webkit-box-flex:1;
  -webkit-flex-grow:1;
  -ms-flex-positive:1;
  flex-grow:1;
  -webkit-flex-wrap:wrap;
  -ms-flex-wrap:wrap;
  flex-wrap:wrap;
  -webkit-box-pack:center;
  -webkit-justify-content:center;
  -ms-flex-pack:center;
  justify-content:center;
}
"
`;

exports[`Renders <Flexbox /> component with several flexbox props 2`] = `
<div
  className="sc-bdVaJa DtNwl"
/>
`;

exports[`Renders <Flexbox /> component with special properties set to the number 0\` 1`] = `
"/*sc-component-id:sc-bdVaJa*/.sc-bdVaJa {
}
.cXgeQK {
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
}
.DtNwl {
  -webkit-align-items:center;
  -webkit-box-align:center;
  -ms-flex-align:center;
  align-items:center;
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
  -webkit-flex-direction:column;
  -ms-flex-direction:column;
  flex-direction:column;
  -webkit-flex-grow:1;
  -ms-flex-grow:1;
  flex-grow:1;
  -webkit-flex-wrap:wrap;
  -ms-flex-wrap:wrap;
  flex-wrap:wrap;
  -webkit-box-pack:center;
  -webkit-justify-content:center;
  -ms-flex-pack:center;
  justify-content:center;
}
.jIWJwd {
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
  -webkit-flex:0;
  -ms-flex:0;
  flex:0;
  -webkit-flex-basis:0;
  -ms-flex-basis:0;
  flex-basis:0;
  -webkit-flex-grow:0;
  -ms-flex-grow:0;
  flex-grow:0;
  -webkit-flex-shrink:0;
  -ms-flex-shrink:0;
  flex-shrink:0;
  height:0;
  margin:0;
  margin-bottom:0;
  margin-left:0;
  margin-right:0;
  margin-top:0;
  max-height:0;
  max-width:0;
  min-height:0;
  min-width:0;
  -webkit-order:0;
  -ms-flex-order:0;
  order:0;
  padding:0;
  padding-bottom:0;
  padding-left:0;
  padding-right:0;
  padding-top:0;
  width:0;
}
"
`;

exports[`Renders <Flexbox /> component with special properties set to the number 0\` 2`] = `
<div
  className="sc-bdVaJa jIWJwd"
/>
`;

exports[`Renders <Flexbox /> with extra props, outside expected/defined ones (like event handlers or className) 1`] = `
"/*sc-component-id:sc-bdVaJa*/.sc-bdVaJa {
}
.cXgeQK {
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
}
.DtNwl {
  -webkit-align-items:center;
  -webkit-box-align:center;
  -ms-flex-align:center;
  align-items:center;
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
  -webkit-flex-direction:column;
  -ms-flex-direction:column;
  flex-direction:column;
  -webkit-box-flex:1;
  -webkit-flex-grow:1;
  -ms-flex-positive:1;
  flex-grow:1;
  -webkit-flex-wrap:wrap;
  -ms-flex-wrap:wrap;
  flex-wrap:wrap;
  -webkit-box-pack:center;
  -webkit-justify-content:center;
  -ms-flex-pack:center;
  justify-content:center;
}
.jIWJwd {
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
  -webkit-flex:0;
  -ms-flex:0;
  flex:0;
  -webkit-flex-basis:0;
  -ms-flex-basis:0;
  flex-basis:0;
  -webkit-flex-grow:0;
  -ms-flex-grow:0;
  flex-grow:0;
  -webkit-flex-shrink:0;
  -ms-flex-shrink:0;
  flex-shrink:0;
  height:0;
  margin:0;
  margin-bottom:0;
  margin-left:0;
  margin-right:0;
  margin-top:0;
  max-height:0;
  max-width:0;
  min-height:0;
  min-width:0;
  -webkit-order:0;
  -ms-flex-order:0;
  order:0;
  padding:0;
  padding-bottom:0;
  padding-left:0;
  padding-right:0;
  padding-top:0;
  width:0;
}
.eylexG {
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
  height:100%;
  margin:66px33px;
  margin-right:25px;
  max-width:100vw;
  min-height:100vh;
  padding:99px;
  padding-left:50px;
  width:100px;
}
"
`;

exports[`Renders <Flexbox /> with extra props, outside expected/defined ones (like event handlers or className) 2`] = `
<div
  className="test-class sc-bdVaJa cXgeQK"
  id="test-id"
  onClick={[Function]}
/>
`;

exports[`Renders <Flexbox /> with inline styles that can overwrite flexbox-react related props too 1`] = `
"/*sc-component-id:sc-bdVaJa*/.sc-bdVaJa {
}
.cXgeQK {
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
}
.DtNwl {
  -webkit-align-items:center;
  -webkit-box-align:center;
  -ms-flex-align:center;
  align-items:center;
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
  -webkit-flex-direction:column;
  -ms-flex-direction:column;
  flex-direction:column;
  -webkit-box-flex:1;
  -webkit-flex-grow:1;
  -ms-flex-positive:1;
  flex-grow:1;
  -webkit-flex-wrap:wrap;
  -ms-flex-wrap:wrap;
  flex-wrap:wrap;
  -webkit-box-pack:center;
  -webkit-justify-content:center;
  -ms-flex-pack:center;
  justify-content:center;
}
.jIWJwd {
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
  -webkit-flex:0;
  -ms-flex:0;
  flex:0;
  -webkit-flex-basis:0;
  -ms-flex-basis:0;
  flex-basis:0;
  -webkit-flex-grow:0;
  -ms-flex-grow:0;
  flex-grow:0;
  -webkit-flex-shrink:0;
  -ms-flex-shrink:0;
  flex-shrink:0;
  height:0;
  margin:0;
  margin-bottom:0;
  margin-left:0;
  margin-right:0;
  margin-top:0;
  max-height:0;
  max-width:0;
  min-height:0;
  min-width:0;
  -webkit-order:0;
  -ms-flex-order:0;
  order:0;
  padding:0;
  padding-bottom:0;
  padding-left:0;
  padding-right:0;
  padding-top:0;
  width:0;
}
.eylexG {
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
  height:100%;
  margin:66px33px;
  margin-right:25px;
  max-width:100vw;
  min-height:100vh;
  padding:99px;
  padding-left:50px;
  width:100px;
}
"
`;

exports[`Renders <Flexbox /> with inline styles that can overwrite flexbox-react related props too 2`] = `
<div
  className="sc-bdVaJa cXgeQK"
  style={
    Object {
      "backgroundColor": "red",
      "display": "block",
    }
  }
/>
`;

exports[`Renders custom element (header) <Flexbox /> component 1`] = `
"/*sc-component-id:sc-bdVaJa*/.sc-bdVaJa {
}
.cXgeQK {
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
}
"
`;

exports[`Renders custom element (header) <Flexbox /> component 2`] = `
<header
  className="sc-bdVaJa cXgeQK"
/>
`;

exports[`Renders minimal <Flexbox /> component 1`] = `
"/*sc-component-id:sc-bdVaJa*/.sc-bdVaJa {
}
.cXgeQK {
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
}
"
`;

exports[`Renders minimal <Flexbox /> component 2`] = `
<div
  className="sc-bdVaJa cXgeQK"
/>
`;
